@@ -1,3 +1,4 @@
+ - Fixed definition of event OnAfterHeaderExport, it used the same member variable as OnBeforeHeaderExport.
  - Fixed problem with Delphi 2007 package
  - Delphi 2009 and 2010 packages are also implicit build packages now, like those for XE and XE2 (issue #279)
  - Fixed #251: Added supoort for C++ Builder XE2
